more notes on java